[package]
name = "rocket-response"
version = "0.0.1-rc.2"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Provides enum for variable Rocket Responses"
documentation = "https://docs.rs/rocket-response"
homepage = "https://github.com/kolbma/rocket-response"
repository = "https://github.com/kolbma/rocket-response"
keywords = ["rocket", "response", "rocket_dyn_templates"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2" }
rocket_dyn_templates = { version = "0.1.0-rc.2", optional = true }

[features]
json = ["rocket/json"]
msgpack = ["rocket/msgpack"]
templates-tera = ["rocket_dyn_templates", "rocket_dyn_templates/tera"]
templates-handlebars = ["rocket_dyn_templates", "rocket_dyn_templates/handlebars"]
